--- a/Canvas_Tracer.html
+++ b/Canvas_Tracer.html
@@ -7,8 +7,8 @@
 		<style type="text/css">
 			html, body, canvas
 			{
-				/* width: 100%;
-				height: 100%; */
+				width: 100%;
+				height: 100%;
 				font-family: Monospace;
 				background-color: #000;
 				color: #000;
@@ -23,7 +23,7 @@
         <body>
 		<canvas></canvas>
 		<div id="info" style="position:fixed; left:2%; bottom:15%; font-family:Courier, monospace; color:rgb(255,255,255);"></div>
-		<script src="Canvas_Tracer.js"></script>
+		<script src="js/Canvas_Tracer.js"></script>
         </body>
         
 </html>>
