--- a/Canvas_Tracer.html
+++ b/Canvas_Tracer.html
@@ -1,29 +1,42 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
-	
-        <head>
-		<meta charset="UTF-8">
-		<title>Canvas Tracer</title>
-		<style type="text/css">
-			html, body, canvas
-			{
-				width: 100%;
-				height: 100%;
-				font-family: Monospace;
-				background-color: #000;
-				color: #000;
-				margin: 0px;
-				overflow: hidden;
-				touch-action: none;
-				cursor: default;
-			}
-		</style>
-	</head>
-	
-        <body>
-		<canvas></canvas>
-		<div id="info" style="position:fixed; left:2%; bottom:15%; font-family:Courier, monospace; color:rgb(255,255,255);"></div>
-		<script src="Canvas_Tracer.js"></script>
-        </body>
-        
-</html>>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Canvas Tracer</title>
+	<style>
+		html,
+		body,
+		canvas {
+			width: 100%;
+			height: 100%;
+			font-family: Monospace;
+			background-color: #000;
+			color: #000;
+			margin: 0px;
+			overflow: hidden;
+			touch-action: none;
+			cursor: default;
+		}
+
+		a {
+			/* display: inline-block;
+			position: absolute; */
+			position: fixed;
+			background: #69c;
+			color: #fff;
+			padding: 5px 10px;
+		}
+	</style>
+</head>
+
+<body>
+	<a href="" download>Save final Image</a>
+	<canvas></canvas>
+	<div id="info"
+		style="position:fixed; left:2%; bottom:15%; font-family:Courier, monospace; font-size: large; color:rgb(160,160,160);">
+	</div>
+	<script src="js/Canvas_Tracer.js"></script>
+</body>
+
+</html>
