--- a/Canvas_Tracer.html
+++ b/Canvas_Tracer.html
@@ -36,7 +36,7 @@
 	<div id="info"
 		style="position:fixed; left:2%; bottom:15%; font-family:Courier, monospace; font-size: large; color:rgb(160,160,160);">
 	</div>
-	<script src="js/Canvas_Tracer.js"></script>
+	<script src="Canvas_Tracer.js"></script>
 </body>
 
 </html>
