--- a/Canvas_Tracer.html
+++ b/Canvas_Tracer.html
@@ -50,7 +50,7 @@
 
 		<p id="info"> </p>
 
-		<script src="js/Canvas_Tracer.js"> </script>
+		<script src="Canvas_Tracer.js"> </script>
 	</body>
 
 </html>
